--- a/index.html
+++ b/index.html
@@ -102,7 +102,7 @@
         <footer class="footer">
           <p class="footer__text">2023 © Spots</p>
         </footer>
-        <div class="modal">
+        <div class="modal" id="edit-profile-modal">
           <div class="modal__container">
             <button type="submit" class="modal__close-btn"></button>
             <h2 class="modal__title">Edit profile</h2>
