--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
   <body>
     <div class="page">
       <header class="header">
-        <img src="./images/logo.svg" alt="Spot logo" class="header_logo" />
+        <img src="./images/logo.svg" alt="Spot logo" class="header__logo" />
       </header>
       <main class="content">
         <section class="profile page__section">
@@ -47,7 +47,7 @@
         </footer>
         <div class="modal" id="edit-modal">
           <div class="modal__container">
-            <button type="submit" class="modal__close-btn"></button>
+            <button type="button" class="modal__close-btn"></button>
             <h2 class="modal__title">Edit profile</h2>
             <form name="edit-profile" class="modal__form">
               <label for="profile-name-input" class="modal__label"
