add preview modal

--- a/index.html
+++ b/index.html
@@ -104,6 +104,17 @@
         </div>
       </main>
     </div>
+    <div class="modal" id="preview-modal">
+      <div class="modal__content">
+        <button type="button" class="image__close-btn"></button>
+        <img
+          class="modal__image"
+          src="https://practicum-content.s3.us-west-1.amazonaws.com/software-engineer/spots/1-photo-by-moritz-feldmann-from-pexels.jpg"
+          alt="#"
+        />
+      </div>
+      <p class="modal__caption">Caption</p>
+    </div>
     <script defer src="./scripts/index.js"></script>
   </body>
 </html>
