--- a/index.html
+++ b/index.html
@@ -106,14 +106,16 @@
     </div>
     <div class="modal" id="preview-modal">
       <div class="modal__content">
-        <button type="button" class="image__close-btn"></button>
-        <img
-          class="modal__image"
-          src="https://practicum-content.s3.us-west-1.amazonaws.com/software-engineer/spots/1-photo-by-moritz-feldmann-from-pexels.jpg"
-          alt="#"
-        />
+        <div class="modal__image-container">
+          <img
+            class="modal__image"
+            src="https://practicum-content.s3.us-west-1.amazonaws.com/software-engineer/spots/1-photo-by-moritz-feldmann-from-pexels.jpg"
+            alt="#"
+          />
+          <button type="button" class="image__close-btn"></button>
+        </div>
+        <figcaption class="modal__caption">Caption</figcaption>
       </div>
-      <p class="modal__caption">Caption</p>
     </div>
     <script defer src="./scripts/index.js"></script>
   </body>
