--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
               Edit Profile
             </button>
           </div>
-          <button type="button" class="post__add-btn">New Post</button>
+          <button type="button" class="profile__add-btn">New Post</button>
         </section>
         <section class="cards page__section">
           <ul class="cards__list">
@@ -48,7 +48,10 @@
         </footer>
         <div class="modal" id="edit-modal">
           <div class="modal__container">
-            <button type="button" class="modal__close-btn"></button>
+            <button
+              type="button"
+              class="modal__close-btn modal__prof-close-btn"
+            ></button>
             <h2 class="modal__title">Edit profile</h2>
             <form name="edit-profile" class="modal__form">
               <label for="profile-name-input" class="modal__label"
@@ -56,7 +59,7 @@
                 <input
                   type="text"
                   id="profile-name-input"
-                  class="modal__input"
+                  class="modal__input modal__input_prof_name"
                   placeholder="Type your name"
                 />
               </label>
@@ -65,7 +68,7 @@
                 <input
                   type="text"
                   id="profile-desc-input"
-                  class="modal__input"
+                  class="modal__input modal__input_desc_input"
                   placeholder="Describe yourself"
                 />
               </label>
@@ -75,15 +78,22 @@
         </div>
         <div class="modal" id="add-card-modal">
           <div class="modal__container">
-            <button type="button" class="modal__close-btn"></button>
+            <button
+              type="button"
+              class="modal__close-btn modal__card-close-btn"
+            ></button>
             <h2 class="modal__title">New post</h2>
-            <form name="add-card-form" class="modal__form" id="add-card-form">
+            <form
+              name="add-card-form"
+              class="modal__form modal__form_add_card"
+              id="add-card-form"
+            >
               <label for="add-card-link-input" class="modal__label"
                 >Image link
                 <input
                   type="url"
                   id="add-card-link-input"
-                  class="modal__input"
+                  class="modal__input modal__input_link_input"
                   placeholder="Place a link to the picture"
                   name="link"
                 />
@@ -93,7 +103,7 @@
                 <input
                   type="text"
                   id="add-card-caption-input"
-                  class="modal__input"
+                  class="modal__input modal__input_add_card_caption"
                   placeholder="Type your caption"
                   name="caption"
                 />
@@ -107,14 +117,17 @@
     <div class="modal" id="preview-modal">
       <div class="modal__content">
         <div class="modal__image-container">
-          <button type="button" class="image__close-btn"></button>
+          <button
+            type="button"
+            class="modal__close-btn image__close-btn"
+          ></button>
           <img
             class="modal__image"
             src="https://practicum-content.s3.us-west-1.amazonaws.com/software-engineer/spots/1-photo-by-moritz-feldmann-from-pexels.jpg"
             alt="#"
           />
         </div>
-        <figcaption class="modal__caption">Caption</figcaption>
+        <p class="modal__caption">Caption</p>
       </div>
     </div>
     <script defer src="./scripts/index.js"></script>
