fix: BEM mistake

--- a/index.html
+++ b/index.html
@@ -119,7 +119,7 @@
         <div class="modal__image-container">
           <button
             type="button"
-            class="modal__close-btn image__close-btn"
+            class="modal__close-btn modal__close-btn_type_preview"
           ></button>
           <img
             class="modal__image"
