fix: BEM errors

--- a/index.html
+++ b/index.html
@@ -114,7 +114,7 @@
         </div>
       </main>
     </div>
-    <div class="modal" id="preview-modal">
+    <div class="modal" id="modal-preview">
       <div class="modal__content">
         <div class="modal__image-container">
           <button
