--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
               class="modal__close-btn modal__prof-close-btn"
             ></button>
             <h2 class="modal__title">Edit profile</h2>
-            <form name="edit-profile" class="modal__form">
+            <form name="edit-profile" class="modal__form" novalidate>
               <label for="profile-name-input" class="modal__label"
                 >Name
                 <input
@@ -61,7 +61,11 @@
                   id="profile-name-input"
                   class="modal__input modal__input_prof_name"
                   placeholder="Type your name"
+                  required
+                  minlength="2"
+                  maxlength="40"
                 />
+                <span id="profile-name-input-error" class="modal__error"></span>
               </label>
               <label for="profile-desc-input" class="modal__label"
                 >Description
@@ -70,9 +74,15 @@
                   id="profile-desc-input"
                   class="modal__input modal__input_desc_input"
                   placeholder="Describe yourself"
+                  required
+                  minlength="2"
+                  maxlength="200"
                 />
+                <span id="profile-desc-input-error" class="modal__error"></span>
               </label>
-              <button type="submit" class="modal__submit-btn">Save</button>
+              <button type="submit" class="modal__button modal__submit-btn">
+                Save
+              </button>
             </form>
           </div>
         </div>
@@ -87,6 +97,7 @@
               name="add-card-form"
               class="modal__form modal__form_add_card"
               id="add-card-form"
+              novalidate
             >
               <label for="add-card-link-input" class="modal__label"
                 >Image link
@@ -96,7 +107,12 @@
                   class="modal__input modal__input_link_input"
                   placeholder="Place a link to the picture"
                   name="link"
+                  required
                 />
+                <span
+                  id="add-card-link-input-error"
+                  class="modal__error"
+                ></span>
               </label>
               <label for="add-card-caption-input" class="modal__label"
                 >Caption
@@ -106,9 +122,18 @@
                   class="modal__input modal__input_add_card_caption"
                   placeholder="Type your caption"
                   name="caption"
+                  required
+                  minlength="2"
+                  maxlength="30"
                 />
+                <span
+                  id="add-card-caption-input-error"
+                  class="modal__error"
+                ></span>
               </label>
-              <button type="submit" class="modal__submit-btn">Save</button>
+              <button type="submit" class="modal__button modal__submit-btn">
+                Save
+              </button>
             </form>
           </div>
         </div>
@@ -131,5 +156,6 @@
       </div>
     </div>
     <script defer src="./scripts/index.js"></script>
+    <script defer src="./scripts/validation.js"></script>
   </body>
 </html>
