--- a/index.html
+++ b/index.html
@@ -53,7 +53,12 @@
               class="modal__close-btn modal__prof-close-btn"
             ></button>
             <h2 class="modal__title">Edit profile</h2>
-            <form name="edit-profile" class="modal__form" novalidate>
+            <form
+              name="edit-profile"
+              class="modal__form"
+              id="profile-form"
+              novalidate
+            >
               <label for="profile-name-input" class="modal__label"
                 >Name
                 <input
